@@ -36,7 +36,7 @@
       <enum>QTabWidget::TabShape::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>5</number>
+      <number>7</number>
      </property>
      <widget class="QWidget" name="tabGeneral">
       <attribute name="title">
@@ -1188,8 +1188,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>98</width>
-            <height>28</height>
+            <width>100</width>
+            <height>30</height>
            </rect>
           </property>
           <attribute name="label">
@@ -1252,8 +1252,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>695</width>
-            <height>411</height>
+            <width>693</width>
+            <height>418</height>
            </rect>
           </property>
           <attribute name="label">
@@ -1845,7 +1845,7 @@ p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Ubuntu'; font-size:11pt;&quot;&gt;Checking for updates...&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="openLinks">
@@ -1863,20 +1863,27 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <item>
         <widget class="QGroupBox" name="wsGroupBox">
          <property name="title">
-          <string>Default Workspace</string>
+          <string>Default Working Directory</string>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_13">
-          <item>
+         <layout class="QGridLayout" name="gridLayout_19">
+          <item row="0" column="1">
+           <widget class="QPushButton" name="btn_browse">
+            <property name="text">
+             <string>Browse</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
            <widget class="QLineEdit" name="txt_workspace">
             <property name="placeholderText">
              <string/>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QPushButton" name="btn_browse">
+          <item row="1" column="0" colspan="2">
+           <widget class="QCheckBox" name="cbSwitchDefaultWorkDir">
             <property name="text">
-             <string>Browse</string>
+             <string>Switch default on changing project to the projects Working Directory</string>
             </property>
            </widget>
           </item>
@@ -1886,7 +1893,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <item>
         <widget class="QGroupBox" name="cleanWsGroupBox">
          <property name="title">
-          <string>Clean-up Workspace</string>
+          <string>Clean-up Working Directory</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_12">
           <item>
@@ -2021,7 +2028,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <item>
            <widget class="QCheckBox" name="cleanWsBox">
             <property name="text">
-             <string>Clean-up selected workspace directories on start-up</string>
+             <string>Clean-up selected Working Directories on start-up</string>
             </property>
            </widget>
           </item>
