@@ -2,6 +2,7 @@ Version 1.23.0 *
 ==================
 - Added storing of the fold state for known source files.
 - Added keyboard navigation and selection to the tables of the model library explorer.
+- Added dynamic switching default working directory.
 - Fix broken links to option document when pressing `F1` in solver option editor.
 - Improved connect editor workflow by linking agent and option name to corresponding entry in connect document with `F1` hotkey.
 - Upgraded Studio to Qt 6.10.0
